refactor: update ensureReturnInBracedBlock method to accept a forC parameter for C-specific handling